--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
   <center>
     <p>Hello! Welcome to my web-page. I'm Galen, I can be reached at 1992coolrunnings@gmail.com</p><br>
-    <a href="https://nightbiker.neocities.org/tct/campaign-trail/">OpenTCT can be found here.</a>
+    <a href="https://nevadaa.github.io/tct/campaign-trail/index.html">OpenTCT can be found here.</a>
     </center>
   </body>
 </html>
