--- a/tct/static/mods/MODLOADERFILE.html
+++ b/tct/static/mods/MODLOADERFILE.html
@@ -1,3 +1,5 @@
 <option data-mode="" data-tags="" value="other">Other</option>
 <option data-mode="" data-tags="Funny" value="0000Random_Mod">Random Scenario</option>
-<option data-mode="" data-tags="Althist" value="2032SwanSong">2032SwanSong</option>
+<option data-mode="" data-tags="Althist" value="2032SwanSong">2032 Swan Song</option>
+<option data-mode="" data-tags="Althist" value="2044CoD">2044: Children of Dusk</option>
+<option data-mode="" data-tags="Althist" value="ViceDemo">2008Vice (Demo)</option>
