--- a/tct/campaign-trail/index.html
+++ b/tct/campaign-trail/index.html
@@ -201,9 +201,10 @@
                 <label for="sorting">Sort by:</label>
                 <select onchange="onChangeModSorter(event)" name="sorting" id="modSorting">
                   <option value="chrono">Year</option>
-                  <option value="mostFav">Popularity</option>
+                  <!-- I am leaving this commented out in case you need it for later to add more sorting options -->
+                  <!--<option value="mostFav">Popularity</option>
                   <option value="leastFav">Nicheness</option>
-                  <option value="mostPlays">Plays</option>
+                  <option value="mostPlays">Plays</option>-->
                 </select>
               </div>
               </div>
