--- a/tct/static/mods/MODLOADERFILE.html
+++ b/tct/static/mods/MODLOADERFILE.html
@@ -3,3 +3,4 @@
 <option data-mode="" data-tags="Althist" value="2032SwanSong">2032 Swan Song</option>
 <option data-mode="" data-tags="Althist" value="2044CoD">2044: Children of Dusk</option>
 <option data-mode="" data-tags="Althist" value="ViceDemo">2008Vice (Demo)</option>
+<option data-mode="" data-tags="Althist" value="2278Louisiana">2278Louisiana</option>
