prepare for war

--- a/tct/campaign-trail/index.html
+++ b/tct/campaign-trail/index.html
@@ -204,6 +204,7 @@
             </div>
             <br>
             <div id="site_credits" style="text-align: center;">
+              <a href="https://discord.gg/qt6pQshJtA" style="color:#FF6B6B">Join us on Discord!</a>
               <a href="http://www.americanhistoryusa.com" style="color:#FF6B6B">Original site created by Dan Bryan &copy; 2012- <testf id="year">2022</testf></a>
               <div>
                 <div style="margin-top:10px; display:inline-block;">
