--- a/tct/static/mods/21028 CE_300Nine.html
+++ b/tct/static/mods/21028 CE_300Nine.html
@@ -1539,7 +1539,7 @@ function intro_fakeout() {
 // campaignTrail_temp.running_mate_last_name = 'Harris';
 // campaignTrail_temp.running_mate_image_url = 'https://campaigntrailshowcase.com/static/images/kamala-harris-2020.jpg';
 
-function setTimeout(earth_theme,10) {
+function earth_theme() {
 	campaignTrail_temp.candidate_last_name = 'Patterson';
 	campaignTrail_temp.running_mate_last_name = 'Eastwood';
 	campaignTrail_temp.candidate_image_url = 'https://i.imgur.com/2Lmm31K.png';
@@ -1562,7 +1562,7 @@ function setTimeout(earth_theme,10) {
 	applyNewTheme();
 }
 
-function setTimeout(congress_theme,10) {
+function congress_theme() {
 	campaignTrail_temp.candidate_last_name = 'Patterson';
 	campaignTrail_temp.running_mate_last_name = 'Eastwood';
 	campaignTrail_temp.candidate_image_url = 'https://i.imgur.com/2Lmm31K.png';
@@ -1585,7 +1585,7 @@ function setTimeout(congress_theme,10) {
 	applyNewTheme();
 }
 
-function setTimeout(dark_earth_theme,10) {
+function dark_earth_theme() {
 	
 	header_color = "rgb(58 85 85)";
 	outer_game_window_color = "rgb(58 85 85)";
@@ -1604,7 +1604,7 @@ function setTimeout(dark_earth_theme,10) {
 	applyNewTheme();
 }
 
-function setTimeout(stargazing_theme,10) {
+function stargazing_theme() {
 	
 	header_color = "black";
 	outer_game_window_color = "black";
@@ -1623,7 +1623,7 @@ function setTimeout(stargazing_theme,10) {
 	applyNewTheme();
 }
 
-function setTimeout(reality_seam_theme,10) {
+function reality_seam_theme() {
 	
 	header_color = "#002f2f";
 	outer_game_window_color = "#002f2f";
