--- a/tct/static/mods/21028 CE_300Nine.html
+++ b/tct/static/mods/21028 CE_300Nine.html
@@ -1650,7 +1650,7 @@ function pioneer() {
 	campaignTrail_temp.running_mate_image_url = 'https://i.imgur.com/F6hwuZA.png';
 }
 
-function setTimeout(dark_theme,10) { 
+function dark_theme() { 
 	header_color = "#555555";
 	outer_game_window_color = "#000000";
 	outer_descriptive_window_color = "#333333";
