--- a/tct/static/mods/1968Elvis_init.html
+++ b/tct/static/mods/1968Elvis_init.html
@@ -609,6 +609,16 @@ campaignTrail_temp.achievements = {
   "description" : " As Elvis, make a commercially successful album, and still lose the election.",
   "cannotBeCheated" : true
 },
+"Gators For Elvis" : {
+  "image" : "https://i.ibb.co/y5pSXK0/image.png",
+  "description" : "As Elvis, win Florida (regardless if you win or lose the election).",
+  "cannotBeCheated" : true
+},
+"Hotel Nevada" : {
+  "image" : "https://i.ibb.co/hdyFXf5/image.png",
+  "description" : "Win as Elvis without California.",
+  "cannotBeCheated" : true
+},
 "Jailhouse Rock" : {
   "image" : "https://i.ibb.co/vZHRg4K/image.png",
   "description" : "Deport the Colonel.",
