--- a/tct/static/mods/2032SwanSong_300Vance.html
+++ b/tct/static/mods/2032SwanSong_300Vance.html
@@ -11501,6 +11501,7 @@ endingPicker = (out, totv, aa, quickstats) => {
 		add_slide(ending_image_dict["earth"],slide_dict["roasian_flyby"], true, true);
 	} else {
 		add_slide(ending_image_dict["reddit_mod"],slide_dict["reddit_mod"], true, true);
+		unlockAchievement("A Movement Broken");
 	}
 	
 	if (geopolitical_slide == "china_taiwan") {
