--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>galen's website</title>
-    <link rel="icon" type="image/x-icon" href="heart.gif">
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
-  </head>
-  <body>
-  <center>
-    <p>Hello! Welcome to my web-page. I'm Galen, I can be reached at 1992coolrunnings@gmail.com</p><br>
-    <a href="https://nevadaa.github.io/tct/campaign-trail/index.html">OpenTCT can be found here.</a>
-    </center>
-  </body>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="description" content="OpenTCT is a free-speech oriented fork of Dan Bryan's The Campaign Trail website." />
+
+	<title>OpenTCT</title>
+
+</head>
+
+</HEAD>
+<BODY>
+	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=/tct/campaign-trail/index.html">
+</body>
+
 </html>
