--- a/tct/campaign-trail/index.html
+++ b/tct/campaign-trail/index.html
@@ -48,14 +48,14 @@
             </div>
             <div class="below_header" id="below_header">
               <div class="inner_window_front" id="inner_window_1">
-                <h3>Do you have what it takes to win a Presidential Election?</h3>
+                <h3>Do you have what it takes to win an election?</h3>
                 <ul>
-                  <li>Select a year and a candidate to find out.</li>
+                  <li>Either select a year and candidate to play the official, Dan Bryan scenarios, or choose one of the mods below this page.</li>
                   <li>You will answer questions about your platform and positions, and also about your campaign strategy.</li>
                   <li>The answers will affect your popularity for better or worse, both nationally and in individual states.</li>
                   <li>Walk the fine line between appealing to your base and winning a majority of the votes.</li>
-                  <li>Additionally, the game has been modified to support unofficial, community-made custom scenarios. (or, mods.)</li>
-                  <li>To load a mod, scroll down below to view the mod selection, select a mod, click submit, and then press "Click Here to Begin!".</li>
+                  <li>All mods are created by the community of OpenTCT, or are archived here from years past (with permission from the author, when possible).</li>
+                  <li>To load a mod, scroll down below to view the mod selection, select a mod, click the play button, and then press "Click Here to Begin!".</li>
                   <li>Alternatively, click the 'Custom Mod Loader' button to load a mod by copying and pasting the codes, or even save them!</li>
                 </ul>
                 <span class="campaign_trail_start_emphasis">
@@ -204,7 +204,7 @@
             </div>
             <br>
             <div id="site_credits" style="text-align: center;">
-              <a href="https://discord.gg/qt6pQshJtA" style="color:#FF6B6B">Join us on Discord!</a>
+              <a href="https://discord.gg/qt6pQshJtA" style="color:#FF6B6B">Join us on Discord!</a><br>
               <a href="http://www.americanhistoryusa.com" style="color:#FF6B6B">Original site created by Dan Bryan &copy; 2012- <testf id="year">2022</testf></a>
               <div>
                 <div style="margin-top:10px; display:inline-block;">
