--- a/tct/campaign-trail/modjam.html
+++ b/tct/campaign-trail/modjam.html
@@ -115,13 +115,7 @@
             <div id="modloaddiv" style="display:none">
               <div style="display:none" id="tagContainer">
                 <label>
-                  <input type="checkbox" class="tagCheckbox" value="historical">Historical </label>
-                <label>
-                  <input type="checkbox" class="tagCheckbox" value="althist">AltHist </label>
-                <label>
-                  <input type="checkbox" class="tagCheckbox" value="state">State/Local </label>
-                <label>
-                  <input type="checkbox" class="tagCheckbox" value="international">International </label>
+                  <input type="checkbox" class="tagCheckbox" value="modjam">Modjam</label>
               </div>
               <select style="display:none" name="mod" id="modSelect" onchange="modSelectChange()"></select>
               <div id="customMenu">
