--- a/tct/campaign-trail/modjam.html
+++ b/tct/campaign-trail/modjam.html
@@ -115,7 +115,7 @@
             <div id="modloaddiv" style="display:none">
               <div style="display:none" id="tagContainer">
                 <label>
-                  <input type="checkbox" class="tagCheckbox" value="modjam">Modjam</label>
+                  <input type="checkbox" class="tagCheckbox" value="modjam" disabled>Modjam</label>
               </div>
               <select style="display:none" name="mod" id="modSelect" onchange="modSelectChange()"></select>
               <div id="customMenu">
