--- a/tct/campaign-trail/modjam.html
+++ b/tct/campaign-trail/modjam.html
@@ -156,7 +156,7 @@
             <br>
             <button id="achButton" onclick="openAchievements()">Achievements</button>
             <div id="copyLinkButton" style="display:none; margin-top:10px;" ><button onclick="copyModLink()">Copy Mod Link</button></div>
-            <button id="goBackButton" style="display:none" onclick="window.location.href = 'https://nevadaa.github.io/tct/campaign-trail/index.html'">Go Back To Main Page</button>
+            <button id="goBackButton" style="display:none" onclick="window.location.href = 'https://opencampaigntrail.xyz/tct/campaign-trail/'">Go Back To Main Page</button>
             <div id="bonus_menu_area"></div>
             <br>
             <hr>
