--- a/tct/static/mods/MODLOADERFILE.html
+++ b/tct/static/mods/MODLOADERFILE.html
@@ -7,5 +7,5 @@
 <option data-mode="" data-tags="Althist" value="2032SwanSong">2032 Swan Song</option>
 <option data-mode="" data-tags="Althist" value="2044CoD">2044: Children of Dusk</option>
 <option data-mode="" data-tags="Althist" value="2278Louisiana">2278Louisiana</option>
-<option data-mode="" data-tags="Althist" value="21028">21028</option>
+<option data-mode="" data-tags="Althist" value="21028">21028 Demo</option>
 <option data-mode="" data-tags="Modjam" value="modjamtest">test</option>
