--- a/tct/static/mods/MODLOADERFILE.html
+++ b/tct/static/mods/MODLOADERFILE.html
@@ -8,4 +8,5 @@
 <option data-mode="" data-tags="Althist" value="2044CoD">2044: Children of Dusk</option>
 <option data-mode="" data-tags="Althist" value="2278Louisiana">2278Louisiana</option>
 <option data-mode="" data-tags="Althist" value="21028">21028</option>
+<option data-mode="" data-tags="Althist" value="2024AS">2024 American Spirit</option>
 <option data-mode="" data-tags="Modjam" value="modjamtest">test</option>
