modbox for 92angola

--- a/tct/static/mods/1992Angola_init.html
+++ b/tct/static/mods/1992Angola_init.html
@@ -263,3 +263,14 @@ $(".container")[0].style.backgroundColor = "#492222";
 document.head.innerHTML += "<style>#results_container {color:#000000;} .inner_window_w_desc {background-color:#c8b7b7!important;}</style>";
 
 //#endcode
+
+
+campaignTrail_temp.modBoxTheme = {
+    "header_color" : "#492222",
+    "header_text_color" : "#FFFFFF",
+    "description_text_color" : "#FFFFFF",
+    "description_background_color" : "#57432e",
+    "main_color" : "#6e100d",
+    "secondary_color" : "#383838",
+    "ui_text_color": "#8f2622"
+  }
