--- a/tct/static/mods/1992Angola_init.html
+++ b/tct/static/mods/1992Angola_init.html
@@ -260,6 +260,8 @@ $("#game_window")[0].style.backgroundColor = nct_stuff.themes[nct_stuff.selected
 
 $(".container")[0].style.backgroundColor = "#492222";
 
+document.getElementById("header").src = "https://files.catbox.moe/4r64j8.png";
+
 document.head.innerHTML += "<style>#results_container {color:#000000;} .inner_window_w_desc {background-color:#c8b7b7!important;}</style>";
 
 //#endcode
