--- a/tct/campaign-trail/modjam.html
+++ b/tct/campaign-trail/modjam.html
@@ -5,6 +5,7 @@
     <title>OpenTCT Mod Jam</title>
     <link rel="stylesheet" href="../static/amusa_main_2016032801.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="../static/css/community.css" type="text/css" media="screen" />
+    <link rel="icon" type="image/x-icon" href="../static/opentctfavico.gif">
     <link rel="shortcut icon" href="/static/34starcircle-2.png" type="image/png" />
     <link rel="canonical" href="index.html" />
     <meta name="description" content="Can you win a Presidential election? Step into the shoes of a battery of candidates across real and alternate timelines and find out." />
