--- a/tct/static/mods/1992Angola_15699Party.html
+++ b/tct/static/mods/1992Angola_15699Party.html
@@ -331,7 +331,7 @@ campaignTrail_temp.answers_json = [
         "pk": 4433,
         "fields": {
             "question": 723,
-            "description": "An Angolan oil industry should be funded exclusively by the Angolan governmen."
+            "description": "An Angolan oil industry should be funded exclusively by the Angolan government."
         }
     },
     {
