--- a/tct/static/mods/1992Angola_15699Party.html
+++ b/tct/static/mods/1992Angola_15699Party.html
@@ -9,7 +9,7 @@ campaignTrail_temp.cyoa = true;
 	}
 
     var unitedFront = 0;
-
+    var contradictoryPositions = 0;
 cyoAdventure = function (a) {
     ans = campaignTrail_temp.player_answers[campaignTrail_temp.player_answers.length-1];
     e.noCounter += 1
@@ -27,6 +27,9 @@ cyoAdventure = function (a) {
     }
     if(e.noCounter == 18 && unitedFront > 2){
        campaignTrail_temp.questions_json[18] = tunnel(16121);
+    }
+    if(e.noCounter == 19 && e.player_answers.includes(4413) && e.player_answers.includes(4417) && e.player_answers.includes(4458)){
+        contradictoryPositions += 1;
     }
 }
 
@@ -5110,3 +5113,17 @@ campaignTrail_temp.jet_data = [{
 }
 ]
 
+endingPicker = (out, totv, aa, quickstats) => {
+    if(quickstats[1] > 60){
+        ctsAchievement("DEATH TO THE MPLA"); 
+    }
+    else if(out == "win" && contradictoryPositions > 1){
+        ctsAchievement("Contradictions of Savimbi"); 
+    }
+    else if (out == "win" && unitedFront > 2){
+        ctsAchievement("UNINLA"); 
+    }
+    else if (out == "loss" && unitedFront > 2){
+        ctsAchievement("UNINFAIL"); 
+    }
+}
