--- a/tct/static/mods/1992Angola_init.html
+++ b/tct/static/mods/1992Angola_init.html
@@ -56,8 +56,8 @@ campaignTrail_temp.candidate_json = [
             "secondary_color_hex": "#90C0FF",
             "is_active": 1,
             "image_url": "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Jonas_Savimbi.jpg/230px-Jonas_Savimbi.jpg",
-            "electoral_victory_message": "<h3>Congratulations! You have won the 1992 Angolan general election.</h3><p>Although suspicions of rigging and ballot stuffing were bubbling up, the Marxist-Leninistt government of Angola has peacefully transferred power to your party.</p><p>With the defeat of communism in one of the few African Marxist states, you may take Angola in whatever direction you'd like, considering your personalist hold on UNITA.</p>",
-            "electoral_loss_message": "<h3>Sorry. You have lost the 1992 Angolan general election.</h3><p>In spite of being seen favorably by polls across Angola, clearly this has not manifested in turnout.</p><p>News came out recently that multiple prominent ranks in UNITA have been purged. Already contacting your units, you've told them to mobilize as fears of election rigging reach a boiling point. You will have the disadvantage, but that's where you seem to thrive best!</p>",
+            "electoral_victory_message": "<h3>Congratulations! You have won the 1992 Angolan general election.</h3><p>You've done the impossible. You've broken the stranglehold of the MPLA and been elected President outright. By all means, it should have been considered impossible, but with the fall of the Communist bloc across the world, Angola was not immune to national changes. This was truly a peaceful revolution, and your men set their guns side aside as you ready to take office.</p><p>Of course, the MPLA still control the legislature, the courts, every actual aspect of Angola's governance. They will do everything they can to break you. Let's hope you can harnass your popular support to break their resistance down otherwise you may end up turning to the guns once more.</p><p>But for now, enjoy your victory, Mr. President!</p>",
+            "electoral_loss_message": "<h3>Sorry. You have lost the 1992 Angolan general election.</h3><p>Across the world the specter of communism is collapsing. But, tragically, not in Angola. Whether it be due to being unable to spread a clear message or the MPLA's election rigging, you have lost the presidential elections. You were never the retail politician though. That's not where you got started.</p><p>The votes are barely counted before you hear word of MPLA militias ambushing and murdering UNITA men. Already contacting your units, you've told them to mobilize for war. It seems that if you are going to free Angola, it will have to happen through the barrel of a gun. You will have the disadvantage, but that's where you seem to thrive best!</p>",
             "no_electoral_majority_message": "'",
             "description_as_running_mate": "'",
             "candidate_score": 1,
@@ -185,7 +185,7 @@ campaignTrail_temp.running_mate_json = [
     }
 ]
 
-campaignTrail_temp.credits = "RTKH"
+campaignTrail_temp.credits = "RTKH with help from Charlie"
 
 campaignTrail_temp.global_parameter_json = [
     {
@@ -266,6 +266,39 @@ document.head.innerHTML += "<style>#results_container {color:#000000;} .inner_wi
 
 //#endcode
 
+
+campaignTrail_temp.achievements = {
+  "Wizard Wont Enter" : {
+    "image" : "https://files.catbox.moe/a34uex.png",
+    "description" : "Win 60% of the vote as the MPLA.",
+    "cannotBeCheated" : true
+  },
+  "Contradictions of Savimbi" : {
+    "image" : "https://files.catbox.moe/3qnlv1.png",
+    "description" : "Win the election as UNITA with contradictory positions throughout the entire campaign.",
+    "cannotBeCheated" : true
+  },
+  "UNINLA" : {
+    "image" : "https://files.catbox.moe/o9vygc.png",
+    "description" : "Create a joint UNITA-FNLA ticket (and win the election).",
+    "cannotBeCheated" : true
+  },
+  "UNINFAIL" : {
+    "image" : "https://files.catbox.moe/ywxdzp.png",
+    "description" : "Create a joint UNITA-FNLA ticket (and lose the election).",
+    "cannotBeCheated" : true
+  },
+  "Onwards for the People" : {
+    "image" : "https://files.catbox.moe/3l272a.png",
+    "description" : "Win as the FNLA.",
+    "cannotBeCheated" : true
+  },
+  "DEATH TO THE MPLA" : {
+    "image" : "https://i.ibb.co/L5sPnKK/image.png",
+    "description" : "Win the election as UNITA with over 60% of the vote.",
+    "cannotBeCheated" : true
+  }
+  }
 
 campaignTrail_temp.modBoxTheme = {
     "header_color" : "#492222",
