--- a/tct/static/mods/1992Angola_init.html
+++ b/tct/static/mods/1992Angola_init.html
@@ -294,7 +294,7 @@ campaignTrail_temp.achievements = {
     "cannotBeCheated" : true
   },
   "DEATH TO THE MPLA" : {
-    "image" : "https://i.ibb.co/L5sPnKK/image.png",
+    "image" : "https://files.catbox.moe/ywucxo.png",
     "description" : "Win the election as UNITA with over 60% of the vote.",
     "cannotBeCheated" : true
   }
