fixes to holden

--- a/tct/static/mods/1992Angola_15723Party.html
+++ b/tct/static/mods/1992Angola_15723Party.html
@@ -2827,6 +2827,16 @@ campaignTrail_temp.answer_score_global_json = [
     },
     {
         "model": "campaign_trail.answer_score_global",
+        "pk": 16083,
+        "fields": {
+            "answer": 4465,
+            "candidate": 15723,
+            "affected_candidate": 15699,
+            "global_multiplier": -0.006
+        }
+    },
+    {
+        "model": "campaign_trail.answer_score_global",
         "pk": 2297,
         "fields": {
             "answer": 4481,
@@ -2880,7 +2890,7 @@ campaignTrail_temp.answer_score_global_json = [
         "pk": 2335,
         "fields": {
             "answer": 4524,
-            "candidate": 15675,
+            "candidate": 15723,
             "affected_candidate": 15675,
             "global_multiplier": -0.05
         }
@@ -2980,7 +2990,7 @@ campaignTrail_temp.answer_score_global_json = [
         "pk": 15890,
         "fields": {
             "answer": 4523,
-            "candidate": 15675,
+            "candidate": 15723,
             "affected_candidate": 15675,
             "global_multiplier": -0.04
         }
