--- a/tct/campaign-trail/index.html
+++ b/tct/campaign-trail/index.html
@@ -205,14 +205,17 @@
             </div>
             <br>
             <div id="site_credits" style="text-align: center;">
-              <a href="https://discord.gg/qt6pQshJtA" style="color:#FF6B6B">Join us on Discord!</a><br>
-              <a href="http://www.americanhistoryusa.com" style="color:#FF6B6B">Original site created by Dan Bryan &copy; 2012- <testf id="year">2022</testf></a>
+              <a href="https://discord.gg/qt6pQshJtA" style="background-color:#1e3a36; color:#70a79d">Join us on Discord!</a><br>
+              <a href="http://www.americanhistoryusa.com" style="color:#FF6B6B">Original site created by Dan Bryan &copy; 2012- <testf id="year">2022</testf></a><br><br>
               <div>
                 <div style="margin-top:10px; display:inline-block;">
                   <button onclick="activateBenefitCheck()" style="border-radius:5px; font-weight:bold;padding:10px;">Benefit Checker</button>
                   <button onclick="activateCheatMenu()" style="border-radius:5px; font-weight:bold;padding:10px;">Cheat Menu</button>
                   <button id="customThemesButton" onclick="toggleModBoxThemes()" style="border-radius:5px; font-weight:bold;padding:10px;">Loading</button>
                   <button id="mobileModeButton" onclick="toggleMobileMode()" style="border-radius:5px; font-weight:bold;padding:10px;">Loading</button>
+                  <br><br>
+                  <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="opentct" data-color="#1cc4a3" data-emoji="🗳️"  data-font="Arial" data-text="Donate to keep us running!" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#FFDD00" ></script>
+                  <p style="color:#FF6B6B">If you want to donate to a specific mod creator, add their mod's name to the donation and it'll be sent to them, no questions asked!</p>
                 </div>
               </div>
             </div>
