made it redirect to the website

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="description" content="OpenTCT is a free-speech oriented fork of Dan Bryan's The Campaign Trail website." />
-
+	<meta http-equiv="refresh" content="0; url=http://example.com/" />
 	<title>OpenTCT</title>
 
 </head>
 
 </HEAD>
 <BODY>
-	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=/tct/campaign-trail/index.html">
+	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=https://opencampaigntrail.xyz/tct/campaign-trail/">
 </body>
 
 </html>
